--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -15,17 +15,17 @@ services:
       - static_value:/app/static/
       - media_value:/app/media/
     depends_on:
-      - db
+      - db_api
     env_file:
       - ./.env
 
   nginx_api:
-    image: nginx:1.21.3-alpine
+    image: nginx:1.19.3-alpine
     restart: always
     ports:
-      - "80:80"
+      - "81:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
