--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: postgres:13.0-alpine
     restart: always
     volumes:
-      - db_value:/var/lib/postgresql/data/
+      - api_db_value:/var/lib/postgresql/data/
     env_file:
       - ./.env
 
@@ -12,8 +12,8 @@ services:
     image: denisktv/api_referral:latest
     restart: always
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - api_static_value:/app/static/
+      - api_media_value:/app/media/
     depends_on:
       - db_api
     env_file:
@@ -27,12 +27,12 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - api_static_value:/var/html/static/
+      - api_media_value:/var/html/media/
     depends_on:
       - backend
 
 volumes:
-  static_value:
-  media_value:
-  db_value:
+  api_static_value:
+  api_media_value:
+  api_db_value:
